# javaplayer

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
audioplayer/: CMakeLists.txt  build.gradle
audioplayer/src/main/: AndroidManifest.xml
audioplayer/src/main/cpp/: AudioCallJava.cpp  AudioCallJava.h  AudioFFmpeg.cpp  AudioFFmpeg.h  AudioPlayer.cpp  AudioPlayer.h  AudioPlayerStatus.cpp  AudioPlayerStatus.h  PlayerQuene.cpp  PlayerQuene.h  native-lib.cpp
cameralibrary/: build.gradle
cameralibrary/src/main/: AndroidManifest.xml
ffmpeglibrary/: CMakeLists.txt  build.gradle
ffmpeglibrary/src/main/: AndroidManifest.xml
ffmpeglibrary/src/main/cpp/: XData.cpp  XData.h  (+3 more)
filterlibrary/src/main/: AndroidManifest.xml
gradle/wrapper/: gradle-wrapper.properties
imagedeal/: build.gradle
imagedeal/src/main/: AndroidManifest.xml
opengl/: CMakeLists.txt  build.gradle
opengl/src/androidTest/java/com/ggwolf/opengl/: ExampleInstrumentedTest.java
opengl/src/main/: AndroidManifest.xml
opengl/src/main/cpp/: native-lib.cpp
opengl/src/main/cpp/render/: GLSampleBase.h  MyGLRenderContext.cpp  MyGLRenderContext.h
opengl/src/main/cpp/sample/: TriangleSample.cpp  TriangleSample.h
opengl/src/main/cpp/util/: GLUtils.cpp  GLUtils.h  LogUtil.h
opengl/src/main/java/com/ggwolf/opengl/: ES3SampleActivity.java
opengl/src/main/java/com/ggwolf/opengl/study/: MyNativeRender.java  MySurfaceView.java
opengl/src/main/res/layout/: activity_es3_sample.xml
opengl/src/test/java/com/ggwolf/opengl/: ExampleUnitTest.java
(+114 files in other folders)
